--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -44,5 +44,17 @@
         <footer>
             <p>AI Text Recognation 3rd FEND Udacity Project</p>
         </footer>
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js').then(registraion=>{
+                        console.log('registraion is successful')
+                    });
+                });
+            }
+            else{
+                console.log('service worker are not supported')
+            }
+ </script>
     </body>
 </html>
